[workspace]

resolver = "2"
members = [
    "optimize",
    "frontend",
	"graphics",
]

default-members = ["frontend"]

[workspace.dependencies]
nalgebra = "0.33"

eframe = { version = "0.27.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

