[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]

[dependencies]
image = "0.24.7"
wasm-bindgen = "0.2.89"
log = "0.4.6"
wasm-logger = "0.2.0"

optimize = { path= "../optimize" }
console_error_panic_hook = "0.1.7"
gloo = {version= "0.11.0", default-features = false, features = ["storage", "dialogs"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'MouseEvent',
  'WheelEvent',
  'HtmlPreElement',
  'HtmlSelectElement',
  'CssStyleDeclaration',
  'HtmlDivElement',
  'HtmlInputElement',
]
