[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]

[dependencies]
egui = "0.27.0"
eframe = { workspace = true }
graphics = { path = "../graphics" }
nalgebra = {workspace = true}
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

image = "0.25"

optimize = { path= "../optimize" }

base64 = "0.22"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

